--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 ```{r setup, warning = FALSE, message = FALSE}
 library(CyTOFtoolbox)
 library(CATALYST)
+library(diffcyt)
 library(uwot)
 library(SingleCellExperiment)
 library(ggplot2)
@@ -27,7 +28,7 @@ library(ggplot2)
 This vignette retakes the 
 [workflow of CATALYST](https://bioconductor.org/packages/release/bioc/vignettes/CATALYST/inst/doc/differential_analysis.html) 
 for the clustering. The clustering is performed using a combination of two 
-algorithms: `FlowSOM` clustering and `ConsensusClusterPlus` metaclustering.
+algorithms: `FlowSOM` clustering and `ConsensusClusterPlus` meta clustering.
 
 The vignette proposes functions to modify the results visualizations:
 
@@ -51,8 +52,8 @@ sce_Bodenmiller <- prepData(PBMC_fs, PBMC_panel, PBMC_md)
 
 ## Clustering analysis 
 
-To perfom the clustering, we need to specify the type markers on which the clustering
-will be perfomed.
+To perform the clustering, we need to specify the type markers on which the clustering
+will be performed.
 
 ```{r clustering}
 # Specify markers to use for clustering
@@ -64,7 +65,7 @@ sce_Bodenmiller <- cluster(sce_Bodenmiller,
                            verbose = FALSE, seed = 1234)
 ```
 
-Based on the delta aera plot which represent the stability gained when using
+Based on the delta area plot which represent the stability gained when using
 $k$ clusters, we can determine the *optimal* number of cluster:
 
 ```{r delta_aera_plot}
@@ -86,6 +87,31 @@ dr_umap_Bodenmiller <- uwot::umap(umap_Bodenmiller_input_data, n_neighbors = 20,
 colnames(dr_umap_Bodenmiller) <- c("X1", "X2")
 reducedDims(sce_Bodenmiller) <- list("UMAP" = dr_umap_Bodenmiller)
 ```
+
+## Differential Abundance (DA) tests
+
+This test from the `diffcyt` package test for differential abundance of cell populations, i.e. clusters.
+
+```{r DA_tests}
+# Create design & constrast matrix
+design_matrix_Bodenmiller <- createDesignMatrix(ei(sce_Bodenmiller), 
+                                                cols_design = "condition")
+contrast_Bodenmiller <- createContrast(c(0, 1))
+# Test
+res_DA_Bodenmiller <- diffcyt(sce_Bodenmiller, 
+                              clustering_to_use = "meta8",
+                              analysis_type = "DA", 
+                              method_DA = "diffcyt-DA-edgeR",
+                              design = design_matrix_Bodenmiller, 
+                              contrast = contrast_Bodenmiller)
+```
+
+Additional notes for the analysis:
+
+- With this dataset, the comparison is straightforward. However in case you need 
+to filter for the comparison, the `filterSCE()` (from the `CATALYST` package)
+function can be used.
+- Factors in the metadata crashed the analysis
 
 # Visualization
 
@@ -112,14 +138,26 @@ Bodenmiller_expinfo_dr_metacluster_values <- data.frame(Bodenmiller_expinfo_dr_v
 
 
 ## Point size
-point_size <- 0.2
+point_size <- 0.5
 ## Point transparency
-point_alpha <- 0.1
-## CATALYST colors for meta-cluster
+point_alpha <- 0.5
+## CATALYST colors for meta-cluster 
+## (keeping the cluster colors defined by the CATALYST package)
 catalyst_col <- CATALYST:::.cluster_cols
 # Plot
 ggplot(Bodenmiller_expinfo_dr_metacluster_values, aes_string(x = names_dr[1], y = names_dr[2])) +
-  geom_point(aes(col = meta8), size = 2, alpha = point_alpha, pch = 16) +
+  geom_point(aes(col = meta8), size = point_size, alpha = point_alpha, pch = 16) +
+  scale_color_manual(values = catalyst_col, name = "8 meta-clusters") +
+  labs(x = paste(dr, "1"), y = paste(dr, "2")) + 
+  theme_bw() + 
+  guides(colour = guide_legend(override.aes = list(size = 5, alpha = 1))) 
+```
+```{r cluster_savepng, eval = FALSE}
+# Do not run
+# To save the plot as a png image (in case the dataset contains too many points and cannot be saved as a PDF)
+png(file = "PNG_clusters_meta8_Bodenmiller.png", width = 4000, height = 3800, unit = "px")
+ggplot(Bodenmiller_expinfo_dr_metacluster_values, aes_string(x = names_dr[1], y = names_dr[2])) +
+  geom_point(aes(col = meta8), size = 2, alpha = 0.1, pch = 16) +
   scale_color_manual(values = catalyst_col, name = "8 meta-clusters") +
   labs(x = paste(dr, "1"), y = paste(dr, "2")) + 
   theme_bw() + 
@@ -128,5 +166,21 @@ ggplot(Bodenmiller_expinfo_dr_metacluster_values, aes_string(x = names_dr[1], y 
         legend.title = element_text(size = 80), legend.text = element_text(size = 70),
         axis.ticks.length= unit(0.8, "cm"), axis.ticks = element_line(size = 2),
         panel.border = element_rect(size = 2), panel.grid.major = element_blank()) 
+dev.off()
 ```
 
+
+## DA test heatmap
+
+```{r}
+# Heatmap of DA testing results
+## median (arcsinh-transformed) cell-type marker expressions (across all samples)
+## relative cluster abundances by samples
+plotDiffHeatmap(sce_Bodenmiller, 
+                res_DA_Bodenmiller,
+                th = 0.05,
+                normalize = TRUE, 
+                hm1 = FALSE, 
+                row_anno = TRUE)
+```
+ 
