--- a/vignettes/CytoGLMM-extension.Rmd
+++ b/vignettes/CytoGLMM-extension.Rmd
@@ -2,7 +2,9 @@
 title: "CytoGLMM extension"
 author: "Anne-Maud Ferreira"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: 
+  rmarkdown::html_vignette: 
+    toc: true
 vignette: >
   %\VignetteIndexEntry{CytoGLMM-extension}
   %\VignetteEngine{knitr::rmarkdown}
