--- a/vignettes/data-preprocessing.Rmd
+++ b/vignettes/data-preprocessing.Rmd
@@ -6,7 +6,7 @@ output:
   rmarkdown::html_vignette: 
     toc: true
 vignette: >
-  %\VignetteIndexEntry{clustering}
+  %\VignetteIndexEntry{preprocessing}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
