--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -22,6 +22,7 @@ knitr::opts_chunk$set(
 
 ```{r setup, warning = FALSE, message = FALSE}
 library(CyTOFtoolbox)
+library(flowCore)
 library(CATALYST)
 library(diffcyt)
 library(uwot)
@@ -30,31 +31,90 @@ library(ggplot2)
 library(dplyr)
 ```
 
-# Introduction
+# Metadata
 
-This vignette retakes the 
-[workflow of CATALYST](https://bioconductor.org/packages/release/bioc/vignettes/CATALYST/inst/doc/differential_analysis.html) 
-for the clustering. The clustering is performed using a combination of two 
-algorithms: `FlowSOM` clustering and `ConsensusClusterPlus` meta clustering.
+## Markers information
 
-The vignette proposes functions to modify the results visualizations:
+```{r read_markers_info}
+# Path
+path_markers <- system.file("extdata", "markers_info.txt", package = "CyTOFtoolbox")
+# Read file
+markers_info <- read.table(path_markers)
+# Check
+## Column names
+colnames(markers_info)
+## Marker class
+unique(markers_info$marker_class)
+```
 
-- UMAP;
-- Differential Abudance (DA) heatmaps.
+## Samples information
 
-# Data preprocessing
+```{r read_samples_info}
+# Path
+path_samples <- system.file("extdata", "samples_info.txt", package = "CyTOFtoolbox")
+# Read file
+samples_info <- read.table(path_samples, as.is = "filename")
+## NB: File name must be a character string and not a factor
+# Check
+## Column names
+colnames(samples_info)
+```
 
-## Data 
+# Read FCS files
 
-We use the same data as proposed in the `CATALYST` workflow and prepare the data.
+```{r read_fcsfiles}
+# Path
+path_data <- system.file("extdata", package = "CyTOFtoolbox")
+# Read files as a flowSet
+flowSet_aghaeepour_sub_data <- read.flowSet(files = samples_info$filename,
+                                    path = path_data)
+```
 
-The dataset is the `Bodenmiller_BCR_XL` dataset originally from Bodenmiller et al. (2012).
+## Check file names
 
-```{r load_data, warning = FALSE, message = FALSE}
-# Load data
-data(PBMC_fs, PBMC_panel, PBMC_md)
-# Prepare data
-sce_Bodenmiller <- prepData(PBMC_fs, PBMC_panel, PBMC_md)
+```{r check_file_names}
+# File names
+flowSet_aghaeepour_sub_data_filename <- keyword(flowSet_aghaeepour_sub_data, "FILENAME")
+if (all(flowSet_aghaeepour_sub_data_filename == paste0(path_data, "/", samples_info$filename))) {
+  keyword(flowSet_aghaeepour_sub_data) <- list("FILENAME" = samples_info$filename)
+} else {
+  warning("File names of the flowset not corresponding to the file names of the metadata. Please check.")
+}
+```
+
+## Check markers list
+
+```{r check_marker_list}
+if (!all(colnames(flowSet_aghaeepour_sub_data) %in%
+         as.character(markers_info$fcs_colname))) {
+  warning("Marker names of the flowset not corresponding to the marker file names of the metadata. Please check.")
+}
+# Complete the marker list
+# Get the name of the markers who are missing in the markers metadata
+all_markers <- colnames(flowSet_aghaeepour_sub_data) %in%
+                  markers_info$fcs_colname
+missing_markers <- subset(colnames(flowSet_aghaeepour_sub_data),
+                                      !all_markers)
+# Create a data.frame of the missing markers
+df_missing_markers <- data.frame("fcs_colname" = missing_markers,
+                                 "antigen" = missing_markers,
+                                 "marker_class" = "none")
+# Add the missing markers to the metadata
+markers_info_withmissingmarkers <- rbind(df_missing_markers, markers_info)
+```
+
+# Prepare the data
+
+```{r prepare_data}
+## Prepare the data
+aghaeepour_sub_data <- CATALYST::prepData(flowSet_aghaeepour_sub_data,
+                                  panel = markers_info,
+                                  md = samples_info,
+                                  md_cols = list(file = "filename",
+                                                 id = "filename",
+                                                 factors = c("patient_id", "condition")),
+                                  cofactor = 5) # automatically applied arcsinh transformation with cofactor = 5
+
 ```
 
 # Analysis 
@@ -66,10 +126,10 @@ will be performed.
 
 ```{r clustering}
 # Specify markers to use for clustering
-type_markers(sce_Bodenmiller)
+type_markers(aghaeepour_sub_data)
 # Cluster
-sce_Bodenmiller <- cluster(sce_Bodenmiller, 
-                           features = type_markers(sce_Bodenmiller),
+aghaeepour_sub_data <- cluster(aghaeepour_sub_data, 
+                           features = type_markers(aghaeepour_sub_data),
                            xdim = 10, ydim = 10, maxK = 20, 
                            verbose = FALSE, seed = 1234)
 ```
@@ -79,7 +139,7 @@ $k$ clusters, we can determine the *optimal* number of cluster:
 
 ```{r delta_aera_plot}
 # Print the delta area plot
-metadata(sce_Bodenmiller)$delta_area
+metadata(aghaeepour_sub_data)$delta_area
 ```
 
 ## Dimensionality reduction with UMAP
@@ -88,13 +148,13 @@ Dimension reduction is computed with UMAP.
 
 ```{r UMAP}
 # Extract data from sce object
-umap_Bodenmiller_input_data <- t(assay(sce_Bodenmiller))
+umap_aghaeepour_input_data <- t(assay(aghaeepour_sub_data))
 # UMAP dimensionality reduction
 set.seed(1234)
-dr_umap_Bodenmiller <- uwot::umap(umap_Bodenmiller_input_data, n_neighbors = 20, min_dist = 0.1)
+dr_umap_aghaeepour <- uwot::umap(umap_aghaeepour_input_data, n_neighbors = 20, min_dist = 0.1)
 # Add the dimensionality reduction to the SCE
-colnames(dr_umap_Bodenmiller) <- c("X1", "X2")
-reducedDims(sce_Bodenmiller) <- list("UMAP" = dr_umap_Bodenmiller)
+colnames(dr_umap_aghaeepour) <- c("X1", "X2")
+reducedDims(aghaeepour_sub_data) <- list("UMAP" = dr_umap_aghaeepour)
 ```
 
 ### Visualization of the clusters on the UMAP space
@@ -104,22 +164,22 @@ the dimensional reduction space (as UMAP). It is a `ggplot2` object.
 
 ```{r plot_cluster, eval = TRUE}
 # Extract SCE information before plotting
-Bodenmiller_expinfo_dr_metacluster_values <- extract_SCE_info(sce = sce_Bodenmiller,
-                                                              metacluster = "meta8")
+aghaeepour_expinfo_dr_metacluster_values <- extract_SCE_info(sce = aghaeepour_sub_data,
+                                                              metacluster = "meta6")
 
 # Plot
-plot_metaclusters(df = Bodenmiller_expinfo_dr_metacluster_values, 
-                  metacluster = "meta8")
+plot_metaclusters(df = aghaeepour_expinfo_dr_metacluster_values, 
+                  metacluster = "meta6")
 ```
 
 To save the plot as a png image (in case the dataset contains too many points and cannot be saved as a PDF), the following code can be used and adpated:
 
 ```{r cluster_savepng, eval = FALSE}
 # Do not run
-png(file = "PNG_clusters_meta8_Bodenmiller.png", width = 4000, height = 3800, unit = "px")
-ggplot(Bodenmiller_expinfo_dr_metacluster_values, aes_string(x = names_dr[1], y = names_dr[2])) +
-  geom_point(aes(col = meta8), size = 2, alpha = 0.1, pch = 16) +
-  scale_color_manual(values = catalyst_col, name = "8 meta-clusters") +
+png(file = "PNG_clusters_meta6_aghaeepour.png", width = 4000, height = 3800, unit = "px")
+ggplot(aghaeepour_expinfo_dr_metacluster_values, aes_string(x = names_dr[1], y = names_dr[2])) +
+  geom_point(aes(col = meta6), size = 2, alpha = 0.1, pch = 16) +
+  scale_color_manual(values = catalyst_col, name = "6 meta-clusters") +
   labs(x = paste(dr, "1"), y = paste(dr, "2")) + 
   theme_bw() + 
   guides(colour = guide_legend(override.aes = list(size = 30, alpha = 1))) +
@@ -141,17 +201,17 @@ ratio tests:
 
 ```{r DA_tests_edgeR}
 # Create design & constrast matrix
-design_matrix_Bodenmiller <- createDesignMatrix(ei(sce_Bodenmiller), 
+design_matrix_aghaeepour <- createDesignMatrix(ei(aghaeepour_sub_data), 
                                                 cols_design = "condition")
-contrast_Bodenmiller <- createContrast(c(0, 1))
+contrast_aghaeepour <- createContrast(c(0, 1))
 # Test with edgeR
 ## Default method recommended by the package
-res_DA_Bodenmiller_edgeR <- diffcyt(sce_Bodenmiller, 
-                              clustering_to_use = "meta8",
+res_DA_aghaeepour_edgeR <- diffcyt(aghaeepour_sub_data, 
+                              clustering_to_use = "meta6",
                               analysis_type = "DA", 
                               method_DA = "diffcyt-DA-edgeR",
-                              design = design_matrix_Bodenmiller, 
-                              contrast = contrast_Bodenmiller)
+                              design = design_matrix_aghaeepour, 
+                              contrast = contrast_aghaeepour)
 ```
 
 There is a non-parametric test available with `voom`. The `voom` method transforms 
@@ -160,17 +220,17 @@ to stabilize the mean–variance relationship. Then, one Linear Model is fitted 
 
 ```{r DA_tests_voom, results = 'hide', fig.show = 'hide'}
 # Design & constrast matrix are the same as for the diffcyt-DA-edgeR test
-## design_matrix_Bodenmiller <- createDesignMatrix(ei(sce_Bodenmiller), 
+## design_matrix_aghaeepour <- createDesignMatrix(ei(aghaeepour_sub_data), 
 ##                                                cols_design = "condition")
-## contrast_Bodenmiller <- createContrast(c(0, 1))
+## contrast_aghaeepour <- createContrast(c(0, 1))
 # Test with voom
 ## Non-parametric test
-res_DA_Bodenmiller_voom <- diffcyt(sce_Bodenmiller, 
-                              clustering_to_use = "meta8",
+res_DA_aghaeepour_voom <- diffcyt(aghaeepour_sub_data, 
+                              clustering_to_use = "meta6",
                               analysis_type = "DA", 
                               method_DA = "diffcyt-DA-voom",
-                              design = design_matrix_Bodenmiller, 
-                              contrast = contrast_Bodenmiller, 
+                              design = design_matrix_aghaeepour, 
+                              contrast = contrast_aghaeepour, 
                               plot = FALSE)
 ```
 
@@ -204,8 +264,8 @@ the `show_sample_ID` parameter (by default `show_sample_ID = TRUE`).
 # Heatmap of the DA test results
 ## median (arcsinh-transformed) cell-type marker expressions (across all samples)
 ## relative cluster abundances by samples
-plotDAheatmap(x = sce_Bodenmiller,
-              y = res_DA_Bodenmiller_edgeR, 
+plotDAheatmap(x = aghaeepour_sub_data,
+              y = res_DA_aghaeepour_edgeR, 
               comparison = "condition",
               all = TRUE)
 ```
@@ -216,8 +276,8 @@ plotDAheatmap(x = sce_Bodenmiller,
 # Heatmap of the DA test results
 ## median (arcsinh-transformed) cell-type marker expressions (across all samples)
 ## relative cluster abundances by samples
-plotDAheatmap(x = sce_Bodenmiller,
-              y = res_DA_Bodenmiller_voom, 
+plotDAheatmap(x = aghaeepour_sub_data,
+              y = res_DA_aghaeepour_voom, 
               comparison = "condition",
               all = TRUE)
 ```
@@ -229,21 +289,21 @@ an input parameter in the `plotDAheatmap` function.
 ```{r colors_DAheatmap_example, message=FALSE, warning=FALSE}
 # Define the colors which will be used for the heatmaps
 # Keeps only the columns which will be displayed on the top part of the heatmap
-df_levels <- as.data.frame(colData(sce_Bodenmiller)) %>% 
+df_levels <- as.data.frame(colData(aghaeepour_sub_data)) %>% 
    dplyr::select(-cluster_id, -sample_id) %>% 
    unique()
 # Order the values based on the comparison we want to test
 df_levels <- data.frame(df_levels[order(df_levels[,"condition"]),], row.names = NULL)
 # Generate the colors
-colors_Bodenmiller <- colors_DAheatmap(exp_info = df_levels, "condition")
-colors_Bodenmiller
+colors_aghaeepour <- colors_DAheatmap(exp_info = df_levels, "condition")
+colors_aghaeepour
 
 # Use these colors in the heatmap
-plotDAheatmap(x = sce_Bodenmiller,
-              y = res_DA_Bodenmiller_voom, 
+plotDAheatmap(x = aghaeepour_sub_data,
+              y = res_DA_aghaeepour_voom, 
               comparison = "condition",
               all = TRUE,
-              predefined_colors = colors_Bodenmiller) # Add colors as an input parameter
+              predefined_colors = colors_aghaeepour) # Add colors as an input parameter
 ```
 
  
